--- a/java/glassfish/howto/reuse-a-wildcard-ssl-cert-from-apache.mdwn
+++ b/java/glassfish/howto/reuse-a-wildcard-ssl-cert-from-apache.mdwn
@@ -1,6 +1,6 @@
 ## How to reuse a wildcard SSL/TLS cert from Apache on Glassfish
 
-[[!toc]]
+[[!toc levels=3]]
 
 ### Introduction
 
@@ -55,8 +55,7 @@ Now would be a good time to back it up. :)
 
 This step and the one following comes primarily from http://stackoverflow.com/questions/906402/importing-an-existing-x509-certificate-and-private-key-in-java-keystore-to-use-i/8224863#8224863
 
-    [root@dvn-vm2 config]# openssl pkcs12 -export -in /tmp/certs/server.crt -inkey /tmp/certs/server.key -out /tmp/certs/server.p12 -name some-alias -CAfile /tmp/certs/ca.crt -caname root -password pass:some-password --chain
-    [root@dvn-vm2 config]# 
+`[root@dvn-vm2 config]# openssl pkcs12 -export -in /tmp/certs/server.crt -inkey /tmp/certs/server.key -out /tmp/certs/server.p12 -name some-alias -CAfile /tmp/certs/ca.crt -caname root -password pass:some-password --chain`
 
 No output is expected since we supplied the openssl export password on the command line.
 
@@ -66,8 +65,7 @@ We use `--chain` so that we see something other than 1 for "Certificate chain le
 
 Please not that we need the export password from above to import the pks12 keystore:
 
-    [root@dvn-vm2 config]# keytool -importkeystore -deststorepass changeit -destkeypass changeit -destkeystore keystore.jks -srckeystore /tmp/certs/server.p12 -srcstoretype PKCS12 -srcstorepass some-password -alias some-alias
-    [root@dvn-vm2 config]# 
+`[root@dvn-vm2 config]# keytool -importkeystore -deststorepass changeit -destkeypass changeit -destkeystore keystore.jks -srckeystore /tmp/certs/server.p12 -srcstoretype PKCS12 -srcstorepass some-password -alias some-alias`
 
 ### Note that a new entry has been added to keystore.jks
 
