--- a/solr.mdwn
+++ b/solr.mdwn
@@ -17,3 +17,7 @@ http://wiki.apache.org/solr/SolrResources#IRC
 http://colabti.org/irclogger/irclogger_log/lucene-dev
 
 "I would like for #lucene-dev to be a place where people can have zero-latency on-the-record discussions about Lucene and Solr development" -- http://mail-archives.apache.org/mod_mbox/lucene-dev/201004.mbox/%3C2D127F11DC79714E9B6A43AC9458147F3B50A7DB@suex07-mbx-03.ad.syr.edu%3E
+
+## Tools
+
+https://github.com/solrpl/explain
