--- a/java/glassfish.mdwn
+++ b/java/glassfish.mdwn
@@ -7,6 +7,8 @@
     asadmin undeploy hello1
     asadmin list-log-levels server
     asadmin generate-jvm-report
+    asadmin list-jvm-options
+    asadmin get server-config.network-config.network-listeners.network-listener.http-listener-1.port
 
 See also: Subcommands for the asadmin Utility - Oracle GlassFish Server 3.1 Administration Guide - http://docs.oracle.com/cd/E18930_01/html/821-2416/gcode.html
 
