--- a/podcasts.mdwn
+++ b/podcasts.mdwn
@@ -1,11 +1,3 @@
-I may check out. . .
+http://podcasts.greptilian.com
 
-* http://ocw.mit.edu/courses/electrical-engineering-and-computer-science/6-033-computer-system-engineering-spring-2009/ (covers linking)
-* <a href="http://itunes.apple.com/us/itunes-u/programming-paradigms/id384233005">Programming Paradigms | 2008 Stanford - iTunes</a> [Stanford Engineering Everywhere: Programming Paradigms](http://see.stanford.edu/see/lecturelist.aspx?coll=2d712634-2bf1-4b55-9a3a-ca9d470755ee) http://www.youtube.com/watch?v=Ps8jOj7diA0 survey of many languages
-* <a href="http://itunes.apple.com/us/itunes-u/computer-science-162-001-spring/id496414017">Computer Science 162, 001|Spring 2012|UC Berkeley - iTunes</a> http://inst.eecs.berkeley.edu/~cs162/sp12/ http://www.youtube.com/watch?v=sjs5PtCsVA4
-* <a href="http://itunes.apple.com/us/itunes-u/computer-science-61a-001-spring/id496414697">Computer Science 61A, 001|Spring 2012|UC Berkeley - iTunes</a> http://inst.eecs.berkeley.edu/~cs61a/sp12/ http://www.youtube.com/watch?v=2ctRUep1QkA taught in Python
-* <a href="http://itunes.apple.com/us/itunes-u/computer-science-61c-001-spring/id354818653">Computer Science 61C, 001|Spring 2010|UC Berkeley - iTunes</a> http://www-inst.eecs.berkeley.edu/~cs61c/sp10/ taught in C
-* <a href="http://itunes.apple.com/us/itunes-u/computer-science-164-001-spring/id438297382">Computer Science 164, 001|Spring 2011|UC Berkeley - iTunes</a> http://inst.eecs.berkeley.edu/~cs164 https://sites.google.com/a/bodik.org/cs164/ http://www.youtube.com/watch?v=MjR7tQTIWbc http://www.youtube.com/playlist?list=PL3A16CFC42CA6EF4F taught in Python
-* http://surendar.chandrabrown.org
-
-http://www.programmableweb.com/mashups/directory/1?q=podcast via http://stackoverflow.com/questions/3201052/podcast-search-api
+[[!map pages=podcasts/*]]
