--- a/solr.mdwn
+++ b/solr.mdwn
@@ -2,6 +2,8 @@ http://lucene.apache.org/solr/4_1_0/tutorial.html
 
 https://github.com/dvn/solrpoc
 
+autocomplete: http://alexbenedetti.blogspot.co.uk/2015/07/solr-you-complete-me.html
+
 ## `*:*` vs `*`
 
 "lucene" - search for "lucene" in the default field
