--- a/greptilian.com.mdwn
+++ b/greptilian.com.mdwn
@@ -2,14 +2,15 @@ http://greptilian.com is a domain owned by [Philip Durbin](http://greptilian.com
 
 ## Servers
 
-### server1.greptilian.com (launched 2012-04-11)
+### server1.greptilian.com (launched 2012-04-11, decommissioned 2015-12-03)
 
-http://munin.greptilian.com/greptilian.com/server1.greptilian.com/
+### server2.greptilian.com (launched 2015-09-27)
 
-<img src="http://munin.greptilian.com/greptilian.com/server1.greptilian.com/df-week.png">
-<img src="http://munin.greptilian.com/greptilian.com/server1.greptilian.com/if_eth0-week.png">
-<img src="http://munin.greptilian.com/greptilian.com/server1.greptilian.com/cpu-week.png">
-<img src="http://munin.greptilian.com/greptilian.com/server1.greptilian.com/load-week.png">
-<img src="">
-<img src="http://munin.greptilian.com/greptilian.com/server1.greptilian.com/memory-week.png">
-<img src="http://munin.greptilian.com/greptilian.com/server1.greptilian.com/uptime-week.png">
+http://munin.greptilian.com/greptilian.com/server2.greptilian.com/
+
+<img src="http://munin.greptilian.com/greptilian.com/server2.greptilian.com/df-week.png">
+<img src="http://munin.greptilian.com/greptilian.com/server2.greptilian.com/if_eth0-week.png">
+<img src="http://munin.greptilian.com/greptilian.com/server2.greptilian.com/cpu-week.png">
+<img src="http://munin.greptilian.com/greptilian.com/server2.greptilian.com/load-week.png">
+<img src="http://munin.greptilian.com/greptilian.com/server2.greptilian.com/memory-week.png">
+<img src="http://munin.greptilian.com/greptilian.com/server2.greptilian.com/uptime-week.png">
